conf/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
spec:
  backend:
    serviceName: picnic
    servicePort: 80
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: picnic-svc
              servicePort: 80
