conf/picnic-ingress2.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: picnic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: picnic.info
      http:
        paths:
          - path: /*
            backend:
              serviceName: picnic
              servicePort: 80
